crates/aven-parser/tests/fixtures/parser/valid/question-operators.av
config = readConfig(path)?^
quick = readConfig(path)?!
fallback = user?.profile.name ?? "anonymous"
message = result ?
  Ok(value) => value
  Err(error) => fallbackFor(error)
