crates/aven-parser/tests/fixtures/parser/invalid/mixed-inline-block-match.av
value = result ?> @Ok(x) => x
  @Err(e) => e
